# ChangeLog for dev-java/jaxme
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jaxme/ChangeLog,v 1.26 2007/10/22 10:13:21 betelgeuse Exp $

  12 Oct 2008; Serkan Kaba <serkan@gentoo.org> -jaxme-0.3.1-r5.ebuild,
  -files/jaxme-0.3.1-base64.diff, -files/jaxme-0.3.1-gentoo.patch,
  -files/jaxme-0.3.1-jdk6.diff, +jaxme-0.5.2.ebuild,
  +files/jaxme-0.5.2.patch:
  Version bump to support as a jaxb-virtual-2 provider.

  22 Oct 2007; Petteri Räty <betelgeuse@gentoo.org> jaxme-0.3.1-r4.ebuild:
  Use mirror://apache instead of a hardcoded server in SRC_URI. Fixes bug
  #196683.

*jaxme-0.3.1-r4 (18 May 2007)

  18 May 2007; Vlastimil Babka <caster@gentoo.org> -jaxme-0.3.1.ebuild,
  -jaxme-0.3.1-r3.ebuild, +jaxme-0.3.1-r4.ebuild:
  Stable on amd64 for bug #175360; Revbump without change to remove the hsqldb
  depedency from everyone's package.env, workarounds bug #178953. Remove old
  versions.

  09 May 2007; Raúl Porcel <armin76@gentoo.org> jaxme-0.3.1-r3.ebuild:
  Add ~ia64 wrt #160813

  08 May 2007; Vlastimil Babka <caster@gentoo.org> jaxme-0.3.1-r3.ebuild:
  Remove the unused hsqldb dependency. It's only for junit test which we don't
  currently perform.

  23 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  jaxme-0.3.1-r3.ebuild:
  stable x86, bug 175360 and filter jikes

  22 Apr 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  jaxme-0.3.1-r3.ebuild:
  ppc stable, bug #175360

  21 Apr 2007; Markus Rothe <corsair@gentoo.org> jaxme-0.3.1-r3.ebuild:
  Stable on ppc64; bug #175360

  20 Apr 2007; Petteri Räty <betelgeuse@gentoo.org> jaxme-0.3.1-r3.ebuild:
  Switch to java-pkg_dojavadoc.

  20 Apr 2007; Petteri Räty <betelgeuse@gentoo.org> jaxme-0.3.1-r3.ebuild:
  Add dev-java/ant-core to RDEPEND.

  03 Jan 2007; Tom Gall <tgall@gentoo.org> jaxme-0.3.1.ebuild:
  stable on ppc64

  09 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> jaxme-0.3.1-r3.ebuild:
  Add ~x86-fbsd keyword.
