@@ -1,5 +1,5 @@
 AUX jaxme-0.5.2.patch 3500 RMD160 85b101414ec9ebda0617d2c8e032318ca0eb86af SHA1 f3dac58921f34ddbd551a921f3ab17e7863c175a SHA256 3599cd9806b4db1ad3bf41838ae05887aff1cea3775352363fdc769af6e27bbb
 DIST ws-jaxme-0.5.2-src.tar.gz 5478402 RMD160 75ed71ed02c84377a3c3a393a0a22637d01151e5 SHA1 e84103fca9dddb97f5eb2ad6549dcd77306ccd97 SHA256 0415d721259acf95c564fb84606bb17f6227c1cc444e89b78d1cd9903c1c88dc
-EBUILD jaxme-0.5.2.ebuild 2575 RMD160 b5f665083b0535c1022920ff8a10df97fe9a2083 SHA1 f42cb939a04b9880511e1f5bf26c5dbbeb2c5788 SHA256 8546c60df756a8fa94c158c055ea9f4b62d739f4425194cdcf91d3c65ace7d29
-MISC ChangeLog 3975 RMD160 317c9157fa276a08c2b7614ce2f42141e757c2d7 SHA1 78717de9e1746c284ab32a128e743d6c0623facc SHA256 87ec84ae398603b32e3991a8c09a1f87ab4176f61fcaef48ee04a7aabb1967aa
+EBUILD jaxme-0.5.2.ebuild 2654 RMD160 05266707ad86b713b8e894a416bfc91b25322029 SHA1 ca3d0900c8c0da7dc8b17b42928222b431ac084d SHA256 e8443eb78e3910c76b05d2e0c8636b71017ec05e60ad57fce686684eed4eb220
+MISC ChangeLog 4109 RMD160 f091ea7c2cd6159be6b1a1c7f827dc43994cef3b SHA1 90927ba239d67a578539647c7d89651c50de914e SHA256 0cd7cb9e2fab7ede3495ef2db13486216b84d9ae6cc66e51748818d227a72b88
 MISC metadata.xml 158 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 SHA1 77cd509a8b3c377b9a24480b48a5d5481b7874f1 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb
